# accounting_paper_generator

./: .gitignore  .pylintrc  Makefile  README.md  project_structure.txt  pyproject.toml  test.md
.devcontainer/: devcontainer.json
src/accounting_paper_generator/: accounting_paper_template.md  app.py  backend.py  enhance_product_description_prompt.txt  generate_accounting_paper_prompt.txt  generate_test_data_and_template_prompt.txt  suggest_events_prompt.txt
src/accounting_paper_generator/config/: llm_config.yaml
src/accounting_paper_generator/core/: __init__.py  accounting_paper.py  events.py  product_description.py  test_data.py
src/accounting_paper_generator/prompts/: accounting_paper_template.md  chart_of_accounts.md  generate_accounting_paper_prompt.txt  suggest_events_prompt.txt
src/accounting_paper_generator/ui/: app.py  sidebar.py
src/accounting_paper_generator/ui/components/: accounting_paper.py  events.py  product_description.py  test_data.py
src/accounting_paper_generator/utils/: __init__.py  file_operations.py  llm.py
